Fixed entire game - it works now.